<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ton_s.n_post.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sity"
        style="@style/GrayTextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otd"
        android:layout_marginTop="30dp"
        android:id="@+id/otdNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:id="@+id/otdPost"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        style="@style/BlackTextStyle"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/star_on"
        android:layout_alignBottom="@+id/otdPost"
        android:layout_alignTop="@+id/otdPost"
        android:layout_toLeftOf="@+id/otdPost"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_otd"
        android:layout_marginTop="70dp"
        style="@style/RedTextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:layout_marginTop="110dp"
        style="@style/GrayTextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_marginTop="110dp"
        android:layout_alignParentRight="true"
        android:id="@+id/otdDistans"
        style="@style/GrayTextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress_otd"
        style="@style/BlackTextStyle"
        android:layout_marginTop="140dp"
        android:id="@+id/otdAdress"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mar"
        style="@style/RedTextStyle"
        android:layout_marginTop="170dp"
        android:id="@+id/otdMar"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_radio"
        android:layout_alignTop="@+id/otdAdress"
        android:layout_alignBottom="@+id/otdMar"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work"
        style="@style/GrayTextStyle"
        android:layout_marginTop="210dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_time_b"
        style="@style/BlackTextStyle"
        android:layout_marginTop="240dp"
        android:id="@+id/dayTimeB"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_b"
        style="@style/GrayTextStyle"
        android:layout_marginTop="240dp"
        android:layout_toRightOf="@id/dayTimeB"
        android:paddingLeft="5dp"
        android:id="@+id/dayB"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_time_v"
        style="@style/BlackTextStyle"
        android:layout_marginTop="240dp"
        android:layout_toRightOf="@id/dayB"
        android:paddingLeft="5dp"
        android:id="@+id/dayTimeV"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_v"
        style="@style/GrayTextStyle"
        android:layout_marginTop="240dp"
        android:layout_toRightOf="@id/dayTimeV"
        android:paddingLeft="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_work"
        style="@style/GrayTextStyle"
        android:layout_marginTop="260dp"
        android:textStyle="italic"
        android:id="@+id/noWork"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/noWork">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_to_day"
                style="@style/GreyTextDay"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_day"
                style="@style/BlackTextDay"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_in_day"
                style="@style/GreyTextDay"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_day_b"
                style="@style/BlackTextDay"
                android:id="@+id/dayTimeBud"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_bud"
                style="@style/GrayTextLittle"
                android:layout_toRightOf="@+id/dayTimeBud"
                android:layout_marginTop="70dp"
                android:paddingLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_day_v"
                style="@style/BlackTextLittle"
                android:id="@+id/dayTimeLittle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_v"
                style="@style/GrayTextLittle"
                android:layout_toRightOf="@+id/dayTimeLittle"
                android:layout_marginTop="90dp"
                android:paddingLeft="5dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>